# shorty

./: Cargo.toml  LICENSE  README.md  build.rs
src/: app.rs  configs.rs  gui.rs  lib.rs  main.rs
src/resources/: default.toml  help.txt
