[package]
name = "shorty"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.70"
dirs = "5.0.0"
iced = { version = "0.8.0", features = ["tokio", "async-std"] }
serde = "1.0.158"
serde_derive = "1.0.158"
tokio = { version = "1.26.0", features = ["full"] }
toml = "0.7.3"
