[package]
name = "shrtcut"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.70"
clap = "4.2.0"
dirs = "5.0.0"
fltk = { version = "1.3.34", features = ["fltk-bundled"] }
glcp = "0.1.2"
serde = "1.0.158"
serde_derive = "1.0.158"
toml = "0.7.3"
